@@ -1,0 +1,2 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<bind xmlns="http://outer"><named:middle xmlns:named="http://named"><b xmlns="">inner</b></named:middle></bind>
