@@ -1,6 +1,6 @@
 test/rbkt/w3c_testsuite/XQuery/FunctX/functx-fn-tokenize/functx-fn-tokenize-all
 test/rbkt/w3c_testsuite/XQuery/FunctX/functx-fn-tokenize/functx-fn-tokenize-7
-test/rbkt/w3c_testsuite/XQuery/Expressions/FLWORExpr/ForExprType/ForExprType010
+test/rbkt/w3c_testsuite/XQuery/FunctX/functx-fn-namespace-uri-for-prefix/functx-fn-namespace-uri-for-prefix-all
 test/rbkt/w3c_testsuite/XQuery/Expressions/HigherOrder/hof-044
 test/rbkt/w3c_testsuite/XQuery/Expressions/HigherOrder/hof-034
 test/rbkt/w3c_testsuite/XQuery/Expressions/HigherOrder/hof-005
@@ -106,7 +106,6 @@ test/rbkt/w3c_testsuite/XQuery/Functions/HigherOrder/MapPairs/map-pairs-005
 test/rbkt/w3c_testsuite/XQuery/Functions/HigherOrder/MapPairs/map-pairs-001
 test/rbkt/w3c_testsuite/XQuery/Functions/HigherOrder/MapPairs/map-pairs-008
 test/rbkt/w3c_testsuite/XQuery/Functions/HigherOrder/MapPairs/map-pairs-902
-test/rbkt/w3c_testsuite/XQuery/FunctX/functx-fn-namespace-uri-for-prefix/functx-fn-namespace-uri-for-prefix-all
 test/rbkt/w3c_testsuite/XQuery/SchemaValidation/ValidateExpression/validateexpr-28
 test/rbkt/w3c_testsuite/XQuery/exprSeqTypes/PrologExpr/VariableProlog/ExternalVariablesWith/K2-ExternalVariablesWith-22
 test/rbkt/w3c_testsuite/XQuery/StaticTyping/STFLWORExpr/ST-PITest-02
@@ -114,28 +113,7 @@ test/rbkt/w3c_testsuite/XQuery/StaticTyping/STFLWORExpr/ST-WhereExpr001
 test/rbkt/w3c_testsuite/XQuery/StaticTyping/STFLWORExpr/statictyping-24
 test/rbkt/w3c_testsuite/XQuery/StaticTyping/STFLWORExpr/ST-PITest-01
 test/rbkt/w3c_testsuite/XQuery/StaticTyping/STFunctions/ST-Data001
-test/rbkt/w3c_testsuite/XQuery/SchemaImport/SchemaImportProlog/schema-import-13
 test/rbkt/w3c_testsuite/XQuery/SchemaImport/SchemaImportProlog/modules-schema-context
-test/rbkt/w3c_testsuite/XQuery/SchemaImport/SchemaImportProlog/schema-import-17
-test/rbkt/w3c_testsuite/XQuery/SchemaImport/SchemaImportProlog/schema-import-9
-test/rbkt/w3c_testsuite/XQuery/SchemaImport/SchemaImportProlog/schema-import-5
-test/rbkt/w3c_testsuite/XQuery/SchemaImport/SchemaImportProlog/schema-import-25
-test/rbkt/w3c_testsuite/XQuery/SchemaImport/SeqExprCastSI/casthcds9
-test/rbkt/w3c_testsuite/XQuery/SchemaImport/FLWORExprSI/ForExprType049
-test/rbkt/w3c_testsuite/XQuery/SchemaImport/FLWORExprSI/ForExprType025
-test/rbkt/w3c_testsuite/XQuery/SchemaImport/FLWORExprSI/ForExprType039
-test/rbkt/w3c_testsuite/XQuery/SchemaImport/FLWORExprSI/ForExprType053
-test/rbkt/w3c_testsuite/XQuery/SchemaImport/FLWORExprSI/ForExprType052
-test/rbkt/w3c_testsuite/XQuery/SchemaImport/FLWORExprSI/ForExprType040
-test/rbkt/w3c_testsuite/XQuery/SchemaImport/FLWORExprSI/ForExprType038
-test/rbkt/w3c_testsuite/XQuery/SchemaImport/FLWORExprSI/ForExprType044
-test/rbkt/w3c_testsuite/XQuery/SchemaImport/FLWORExprSI/ForExprType042
-test/rbkt/w3c_testsuite/XQuery/SchemaImport/FLWORExprSI/ForExprType043
-test/rbkt/w3c_testsuite/XQuery/SchemaImport/FLWORExprSI/ForExprType027
-test/rbkt/w3c_testsuite/XQuery/SchemaImport/FLWORExprSI/ForExprType026
-test/rbkt/w3c_testsuite/XQuery/SchemaImport/FLWORExprSI/ForExprType050
-test/rbkt/w3c_testsuite/XQuery/SchemaImport/FLWORExprSI/ForExprType041
-test/rbkt/w3c_testsuite/XQuery/SchemaImport/FLWORExprSI/ForExprType051
 test/rbkt/w3c_testsuite/XQuery/Operators/CompExpr/ValComp/NumericComp/NumericLT/K2-NumericLT-2
 test/rbkt/w3c_testsuite/XQuery/Operators/CompExpr/ValComp/NumericComp/NumericLT/K2-NumericLT-1
 test/rbkt/w3c_testsuite/XQuery/Operators/CompExpr/ValComp/NumericComp/NumericGT/K2-NumericGT-2
